@@ -1,3 +1,7 @@
+Mon Jul  7 02:04:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (dir_s_chdir): restore cwd by fchdir if possible.
+
 Mon Jul  7 00:35:10 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* bignum.c (big2str_power_cache): moved to VM specific data.
